# aio-usb-hotplug

./: CHANGELOG.md  MANIFEST.in  Pipfile  README.md  pyproject.toml  setup.py  tbump.toml
.github/workflows/: pythonpackage.yml  pythonpublish.yml
src/aio_usb_hotplug/: __init__.py  __main__.py  errors.py  task.py  version.py
src/aio_usb_hotplug/backends/: __init__.py  autodetect.py  base.py  dummy.py  pyusb.py
test/: test_autodetect.py  test_dummy.py  test_task.py
tests/: test_task.py
