[project]
name = "aio-usb-hotplug"
version = "7.0.0"
description = "Asynchronous generators yielding detected hotplug events on the USB buses"
license = "MIT"
readme = "README.md"
authors = [{ name = "Tamas Nepusz", email = "tamas@collmot.com" }]
requires-python = ">=3.9"
dependencies = [
  "anyio (>=4.9.0)",
  'pyudev (>=0.24.3) ; sys_platform == "linux"',
  "pyusb (>=1.3.1)",
]

[project.urls]
Homepage = "https://github.com/ntamas/aio-usb-hotplug/"
Repository = "https://github.com/ntamas/aio-usb-hotplug/"

[dependency-groups]
dev = [
  "pytest (>=8.4.1)",
  "coverage[toml] (>=7.9.1)",
  "pytest-cov (>=6.2.1)",
  "trio>=0.30.0",
]

[tool.hatch.envs.hatch-test]
extra-dependencies = ["libusb-package", "trio"]

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/aio_usb_hotplug"]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
lint.ignore = ["B905", "E402", "E501"]
lint.select = ["B", "C", "E", "F", "W"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
