[project]
name = "aio-usb-hotplug"
version = "7.0.1"
description = "Asynchronous generators yielding detected hotplug events on the USB buses"
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
authors = [{ name = "Tamas Nepusz", email = "tamas@collmot.com" }]
requires-python = ">=3.10"
dependencies = [
  "anyio (>=4.14.0)",
  'pyudev (>=0.24.4) ; sys_platform == "linux"',
  "pyusb (>=1.3.1)",
]

[project.urls]
Homepage = "https://github.com/ntamas/aio-usb-hotplug/"
Repository = "https://github.com/ntamas/aio-usb-hotplug/"

[dependency-groups]
dev = [
  "pytest (>=9.1.1)",
  "coverage[toml] (>=7.14.3)",
  "pytest-cov (>=7.1.0)",
  "trio>=0.33.0",
]

[tool.hatch.envs.hatch-test]
extra-dependencies = ["libusb-package", "trio"]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
lint.ignore = ["B905", "E402", "E501"]
lint.select = ["B", "C", "E", "F", "W"]

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"
